Integrated new footer in all the pages
Integrated new footer in all the pages
moved common styles to respective CSS files

--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/NAO.css">
+    <link rel="stylesheet" type="text/css" href="styles/NAO-Footer.css">
+    <link rel="stylesheet" type="text/css" href="styles/NAO-NavBar.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <style>
+
+    <!-- <style>
         #logo {
             vertical-align: middle;
         }
@@ -36,7 +38,7 @@
         .navbar-nav {
             margin-left: auto;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
@@ -242,7 +244,69 @@
             </table>
         </div>
     </div>
-
 </body>
+
+<!-- footer -->
+<footer>
+    <p></p>
+    <div class="container">
+        <div class="row">
+            <div class="footcolumn">
+                <h5>National Arab Orchestra</h5>
+                <p>123 Mound Road<br />
+                    Warren, MI 48310
+                </p>
+                <a href="https://goo.gl/maps/vuaKJePcA5y" target="_blank">
+                    <button type="button-footer" class="button-footer"> ☆ Google Directions</button>
+                    <br />
+                    <br />
+                    <div class="container">
+                        <a href="https://www.facebook.com/NationalArabOrchestra/" target="_blank" class="fab fa-facebook"></a>
+                        <a href="https://twitter.com/araborchestra" target="_blank" class="fab fa-twitter"></a>
+                        <a href="https://www.instagram.com/araborchestra/" target="_blank" class="fab fa-instagram"></a>
+                    </div>
+            </div>
+
+            <div class="footcolumn" style="border: 1px; border-style:solid; border-color: #FFFFFF; ">
+                <h5>Box Office</h5>
+                <p>313.576.5111 <br />
+                    <br />
+                    Hours: Monday - Friday, 9am - 5pm <br />
+                    Plus 2 hours prior to concerts * <br />
+                    <br />
+                    Dates, times, prices, programs, <br />
+                    and artists are subject to change.
+                </p>
+            </div>
+
+            <div class="footcolumn-x">
+                <div class="container">
+                    <p> Support the NAO with an Annual Fund gift today.</p>
+
+                    &emsp; <h5 style="display: inline-block">NAO xSignup</h5>
+                    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                    <h5 style="display: inline-block">Donate to the NAO</h5>
+
+                    <div class="container">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" placeholder="Your Email">
+                            <div class="input-group-append">
+                                <button class="button-footer" type="button"><i class="far fa-envelope"></i></button>
+                                <div>&nbsp;</div>
+                                <div>&nbsp;</div>
+                                <div>&nbsp;</div>
+                                <input type="text" class="form-control" placeholder="$125.00">
+                                <div class="input-group-append">
+                                    <button class="button-footer" type="button"><i class="fas fa-heart"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                        <i style="padding-left: 10px; color: gray" class="fas fa-phone"></i>248-123-1234
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </html>
