--- a/src/NAO_Memberships.html
+++ b/src/NAO_Memberships.html
@@ -6,56 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../styles/NAO.css">
+    <link rel="stylesheet" type="text/css" href="../styles/NAO-Footer.css">
+    <link rel="stylesheet" type="text/css" href="../styles/NAO-NavBar.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-    <!------ payment form ---------->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-    <style>
-
-        #logo {
-            vertical-align: middle;
-        }
-
-        .navbar-brand span {
-            font-size: 2rem;
-            line-height: 1.2;
-            font-weight: 200;
-            display: inline-block;
-            vertical-align: middle;
-            padding: 0 0 0 15px;
-        }
-
-        .navbar-brand b {
-            display: block;
-            font-size: 50%;
-            line-height: 1;
-        }
-
-        .navbar-nav {
-            margin-left: auto;
-        }
-    </style>
     <script>
-            $(document).ready(function () {
-                $('a.level').click(function () {
-                    $('button.levelrange').css( "border", "" );
-                    var startId = '#' + $(this).data("start");
-                    var endId = '#' + $(this).data("end");
-                    $(startId).css( "border", "3px solid red" ); 
-                    $(endId).css( "border", "3px solid red" ); 
-                    $("#selectedLevel").text($(this).text());
-                    return false;
-                });
-            });    
+        $(document).ready(function () {
+            $('a.level').click(function () {
+                $('button.levelrange').css("border", "");
+                var startId = '#' + $(this).data("start");
+                var endId = '#' + $(this).data("end");
+                $(startId).css("border", "3px solid red");
+                $(endId).css("border", "3px solid red");
+                $("#selectedLevel").text($(this).text());
+                return false;
+            });
+        });    
     </script>
 </head>
 
@@ -178,7 +148,7 @@
         </table>
     </nav>
 
-    <div class="container" style="width:1200px">
+    <div class="container">
         <img src="../images/Header.jpg" alt="NAO membership header" style="width:100%; height: 250px;">
 
         <div class="vertical-menu">
@@ -220,7 +190,7 @@
         <label id="selectedLevel"></label>
         <br>
         <!-- <p> --- Levels should appear hear when clicked on side menu --- </p> -->
-        <button type="button" class="btn">Select this level</button>
+        <button type="button" class="btn" style="margin-left:10px">Select this level</button>
     </div>
 
     <div class="col-md-6 offset-md-3">
@@ -302,6 +272,70 @@
             </div>
         </div>
         <!-- /form card cc payment -->
+    </div>
 </body>
+
+<!-- footer -->
+<footer>
+    <p></p>
+    <div class="container">
+        <div class="row">
+            <div class="footcolumn">
+                <h5>National Arab Orchestra</h5>
+                <p>123 Mound Road<br />
+                    Warren, MI 48310
+                </p>
+                <a href="https://goo.gl/maps/vuaKJePcA5y" target="_blank">
+                    <button type="button-footer" class="button-footer"> ☆ Google Directions</button>
+                    <br />
+                    <br />
+                    <div class="container">
+                        <a href="https://www.facebook.com/NationalArabOrchestra/" target="_blank" class="fab fa-facebook"></a>
+                        <a href="https://twitter.com/araborchestra" target="_blank" class="fab fa-twitter"></a>
+                        <a href="https://www.instagram.com/araborchestra/" target="_blank" class="fab fa-instagram"></a>
+                    </div>
+            </div>
+
+            <div class="footcolumn" style="border: 1px; border-style:solid; border-color: #FFFFFF; ">
+                <h5>Box Office</h5>
+                <p>313.576.5111 <br />
+                    <br />
+                    Hours: Monday - Friday, 9am - 5pm <br />
+                    Plus 2 hours prior to concerts * <br />
+                    <br />
+                    Dates, times, prices, programs, <br />
+                    and artists are subject to change.
+                </p>
+            </div>
+
+            <div class="footcolumn-x">
+                <div class="container">
+                    <p> Support the NAO with an Annual Fund gift today.</p>
+
+                    &emsp; <h5 style="display: inline-block">NAO xSignup</h5>
+                    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                    <h5 style="display: inline-block">Donate to the NAO</h5>
+
+                    <div class="container">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" placeholder="Your Email">
+                            <div class="input-group-append">
+                                <button class="button-footer" type="button"><i class="far fa-envelope"></i></button>
+                                <div>&nbsp;</div>
+                                <div>&nbsp;</div>
+                                <div>&nbsp;</div>
+                                <input type="text" class="form-control" placeholder="$125.00">
+                                <div class="input-group-append">
+                                    <button class="button-footer" type="button"><i class="fas fa-heart"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                        <i style="padding-left: 10px; color: gray" class="fas fa-phone"></i>248-123-1234
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </html>
