Changes for Shopping Cart and Calendar
Changes for Shopping Cart and Calendar
..removed  unwanted files
..renamed NAO_Calender.html to NAO_Calendar.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                                                 <ul class="navbar-nav">
                                                     <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
-                                                        <a class="nav-link" href="src/NAO_Concerts.html">CONCERTS &
+                                                        <a class="nav-link" href="src/NAO_Calendar.html">CONCERTS &
                                                             TICKETS</a>
                                                     </li>
                                                     <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
