--- a/src/NAO_PlanVisit.html
+++ b/src/NAO_PlanVisit.html
@@ -16,29 +16,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
     <style>
-        /* #logo {
-            vertical-align: middle;
-        }
-
-        .navbar-brand span {
-            font-size: 2rem;
-            line-height: 1.2;
-            font-weight: 200;
-            display: inline-block;
-            vertical-align: middle;
-            padding: 0 0 0 15px;
-        }
-
-        .navbar-brand b {
-            display: block;
-            font-size: 50%;
-            line-height: 1;
-        }
-
-        .navbar-nav {
-            margin-left: auto;
-        } */
-        
         .column {
             float: left;
             width: 33%;
@@ -119,7 +96,7 @@
                                             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                                                 <ul class="navbar-nav">
                                                     <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
-                                                        <a class="nav-link" href="NAO_Concerts.html">CONCERTS & TICKETS</a>
+                                                        <a class="nav-link" href="NAO_Calendar.html">CONCERTS & TICKETS</a>
                                                     </li>
                                                     <li class="nav-item active" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="NAO_PlanVisit.html">PLAN YOUR VISIT</a>
@@ -178,8 +155,8 @@
         </table>
     </nav>
 
-    <img src="../images/PlanVisit.jpg" alt="Plan visit" style="width:100%;">
     <div class="container">
+        <img src="../images/PlanVisit.jpg" alt="Plan visit" style="width:100%;">
         <div class="row">
             <div class="column">
                 <h1>If you're new to Arab Music</h1>
