--- a/src/NAO_Aboutus.html
+++ b/src/NAO_Aboutus.html
@@ -87,7 +87,7 @@
                                             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                                                 <ul class="navbar-nav">
                                                     <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
-                                                        <a class="nav-link" href="NAO_Concerts.html">CONCERTS & TICKETS</a>
+                                                        <a class="nav-link" href="NAO_Calendar.html">CONCERTS & TICKETS</a>
                                                     </li>
                                                     <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="NAO_PlanVisit.html">PLAN YOUR VISIT</a>
