--- a/src/NAO_Education.html
+++ b/src/NAO_Education.html
@@ -76,7 +76,7 @@
                                             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                                                 <ul class="navbar-nav">
                                                     <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
-                                                        <a class="nav-link" href="NAO_Concerts.html">CONCERTS & TICKETS</a>
+                                                        <a class="nav-link" href="NAO_Calendar.html">CONCERTS & TICKETS</a>
                                                     </li>
                                                     <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="NAO_PlanVisit.html">PLAN YOUR VISIT</a>
@@ -136,7 +136,7 @@
     </nav>
 
     <div class="container">
-        <img src="../images/Banner_Education.jpg" alt="NAO Education" style="width:100%; height: 250px;">
+        <img src="../images/Banner_Education.jpg" alt="NAO Education" style="width:100%; height: 400px;">
 
         <article>
             <h3><u>Education lies at the core of the NAO’s mission</u></h3>
