--- a/src/NAO_Memberships.html
+++ b/src/NAO_Memberships.html
@@ -89,7 +89,7 @@
                                             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                                                 <ul class="navbar-nav">
                                                     <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
-                                                        <a class="nav-link" href="NAO_Concerts.html">CONCERTS & TICKETS</a>
+                                                        <a class="nav-link" href="NAO_Calendar.html">CONCERTS & TICKETS</a>
                                                     </li>
                                                     <li class="nav-item" style="padding-right: 15px; padding-top: 5px">
                                                         <a class="nav-link" href="NAO_PlanVisit.html">PLAN YOUR VISIT</a>
@@ -149,7 +149,7 @@
     </nav>
 
     <div class="container">
-        <img src="../images/Header.jpg" alt="NAO membership header" style="width:100%; height: 250px;">
+        <img src="../images/Header.jpg" alt="NAO membership header" style="width:100%; height: 400px;">
 
         <div class="vertical-menu">
             <a href="#" class="active"><b>Membership & Donor Resources</b></a>
