--- a/src/NAO_Cart.html
+++ b/src/NAO_Cart.html
@@ -297,7 +297,20 @@
         </div>
 
         <div id="tabCheckout" class="tabcontent" data-target="btnCheckout" data-tabindex="2">
-            <h3>Checkout to place an order</h3>
+            <table style="width:100%">
+                <tr>
+                    <td style="width:55%">
+                        <h1>Checkout to place an order</h1>
+                    </td>
+                    <td style="width: 45%; float: right">
+                        <div>
+                            Need Help? Contact us:<br>
+                            <strong>248.123.1234</strong><br>
+                            <a href="mailto:tickets@araborchestra.org">tickets@araborchestra.org</a>
+                        </div>
+                    </td>
+                </tr>
+            </table>
             <p id="cartTotalCheckout"></p>
             <button type="button" id="finalCheckout" class="btn" data-toggle="modal" data-target="#orderConfirmation">Checkout</span></button>
         </div>
