--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <a href="src/NAO_Concerts.html">
+                    <a href="src/NAO_Calendar.html">
                         <img src="images/Banner_Concert+Tickets.jpg" alt="NAO Team" style="width:100%; height: 400px;">
                     </a>
                 </div>
