Fixed Donate button style
Fixed Donate button style

--- a/src/NAO_Cart.html
+++ b/src/NAO_Cart.html
@@ -63,7 +63,7 @@
                                         </td>
                                         <td style="padding-right: 10px">
                                             <a href="NAO_Memberships.html">
-                                                <button type="button" class="btn btn-primary">Donate</button>
+                                                <button type="button" class="btn btn-primary" style="background-color: #611E20" >Donate</button>
                                             </a>
                                         </td>
                                     </tr>
