Added required field indicator on payment info UI
Added required field indicator on payment info UI

--- a/src/NAO_Cart.html
+++ b/src/NAO_Cart.html
@@ -192,14 +192,14 @@
                                     <tbody>
                                         <tr>
                                             <td style="width:10%">
-                                                <label for="fname"><i class="fa fa-user"></i> Name</label>
+                                                <label for="fname"><i class="fa fa-user"></i>Name *</label>
                                             </td>
                                             <td style="width:40%">
                                                 <input required type="text" id="fname" name="firstname" placeholder="Enter Full Name"
                                                     class="address">
                                             </td>
                                             <td style="width:10%">
-                                                <label for="email"><i class="fa fa-envelope"></i> Email</label>
+                                                <label for="email"><i class="fa fa-envelope"></i>Email</label>
                                             </td>
                                             <td style="width:40%">
                                                 <input type="email" id="email" name="email" placeholder="Enter Email Address"
@@ -208,14 +208,14 @@
                                         </tr>
                                         <tr>
                                             <td style="width:10%">
-                                                <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
+                                                <label for="adr"><i class="fa fa-address-card-o"></i>Address *</label>
                                             </td>
                                             <td style="width:40%">
                                                 <input required type="text" id="adr" name="address" placeholder="Enter Address"
                                                     class="address">
                                             </td>
                                             <td style="width:10%">
-                                                <label for="state">State</label>
+                                                <label for="state">State *</label>
                                             </td>
                                             <td style="width:40%">
                                                 <input required type="text" id="state" name="state" placeholder="Enter State"
@@ -224,14 +224,14 @@
                                         </tr>
                                         <tr>
                                             <td style="width:10%">
-                                                <label for="city"><i class="fa fa-institution"></i> City</label>
+                                                <label for="city"><i class="fa fa-institution"></i>City *</label>
                                             </td>
                                             <td style="width:40%">
                                                 <input required type="text" id="city" name="city" placeholder="Enter City"
                                                     class="address">
                                             </td>
                                             <td style="width:10%">
-                                                <label for="zip">Zip</label>
+                                                <label for="zip">Zip *</label>
                                             </td>
                                             <td style="width:40%">
                                                 <input required type="text" id="zip" name="zip" placeholder="Enter Zip"
@@ -259,27 +259,27 @@
                                         </tr>
                                         <tr>
                                             <td style="width:50%">
-                                                <label for="cname">Name on Card</label>
+                                                <label for="cname">Name on Card *</label>
                                                 <input required type="text" id="cname" name="cardname" placeholder="Enter Name">
                                             </td>
                                             <td style="width:50%">
-                                                <label for="ccnum">Credit card number</label>
+                                                <label for="ccnum">Credit card number *</label>
                                                 <input required type="text" id="ccnum" name="cardnumber" placeholder="Enter Credit Card Number">
                                             </td>
                                         </tr>
                                         <tr>
                                             <td style="width:50%">
-                                                <label for="expmonth">Exp Month</label>
+                                                <label for="expmonth">Exp Month *</label>
                                                 <input required type="text" id="expmonth" name="expmonth" placeholder="Enter Month">
                                             </td>
                                             <td style="width:50%">
-                                                <label for="expyear">Exp Year</label>
+                                                <label for="expyear">Exp Year *</label>
                                                 <input required type="text" id="expyear" name="expyear" placeholder="Enter Year">
                                             </td>
                                         </tr>
                                         <tr>
                                             <td style="width:50%">
-                                                <label for="cvv">CVV</label>
+                                                <label for="cvv">CVV *</label>
                                                 <input required type="text" id="cvv" name="cvv" placeholder="Enter CVV">
                                             </td>
                                             <td style="width:50%">
